--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.4.0",
     "@supabase/supabase-js": "^2.50.5",
     "@types/react-router-dom": "^5.3.3",
     "@types/recharts": "^1.8.29",
